--- a/vue/src/styles/ChatWindow.scss
+++ b/vue/src/styles/ChatWindow.scss
@@ -1,4 +1,3 @@
-
 .chat-window {
 	flex: 1;
 	display: flex;
@@ -69,13 +68,16 @@
 	box-shadow: 0 0 0 3px #7078e64d;
 }
 
-.avatar img, .message-avatar img, .discord-avatar img {
+.avatar img,
+.message-avatar img,
+.discord-avatar img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 }
 
-.back-button, .more-button {
+.back-button,
+.more-button {
 	background: none;
 	border: none;
 	cursor: pointer;
@@ -130,7 +132,8 @@
 	margin-bottom: 4px;
 }
 
-.message-sent, .message-received {
+.message-sent,
+.message-received {
 	align-self: flex-end;
 	flex-direction: row-reverse;
 }
@@ -311,7 +314,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	background: linear-gradient(to top,#000000b3,transparent);
+	background: linear-gradient(to top, #000000b3, transparent);
 	padding: 8px;
 }
 
@@ -320,7 +323,12 @@
 	opacity: .9;
 }
 
-.message-video::-webkit-media-controls-timeline, .message-video::-webkit-media-controls-current-time-display, .message-video::-webkit-media-controls-time-remaining-display, .message-video::-webkit-media-controls-mute-button, .message-video::-webkit-media-controls-volume-slider, .message-video::-webkit-media-controls-fullscreen-button {
+.message-video::-webkit-media-controls-timeline,
+.message-video::-webkit-media-controls-current-time-display,
+.message-video::-webkit-media-controls-time-remaining-display,
+.message-video::-webkit-media-controls-mute-button,
+.message-video::-webkit-media-controls-volume-slider,
+.message-video::-webkit-media-controls-fullscreen-button {
 	display: none;
 }
 
@@ -652,7 +660,7 @@ input::placeholder {
 }
 
 .video-options-button {
-	background: rgba(0,0,0,0.5);
+	background: rgba(0, 0, 0, 0.5);
 	border: none;
 	border-radius: 4px;
 	width: 24px;
