--- a/vue/src/styles/SideBar.scss
+++ b/vue/src/styles/SideBar.scss
@@ -8,7 +8,7 @@
     height: 95vh;
     border-radius: 12px;
     overflow: hidden;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Csökkentett árnyék méret és átlátszóság */
     transition: transform 0.3s ease-in-out;
   }
   
