--- a/vue/src/styles/SideBar.scss
+++ b/vue/src/styles/SideBar.scss
@@ -228,11 +228,10 @@
   margin-bottom: 8px;
   border-bottom-left-radius: 12px;
   border-bottom-right-radius: 12px;
-  
-  &::-webkit-scrollbar {
-    display: none;
-    width: 0;
-  }
+}
+
+.chats-list::-webkit-scrollbar {
+  display: none;
 }
 
 .chat-item {
