--- a/vue/src/styles/ChatWindow.scss
+++ b/vue/src/styles/ChatWindow.scss
@@ -8,7 +8,7 @@
 	border-radius: 16px;
 	overflow: hidden;
 	color: #333;
-	box-shadow: 0 4px 20px rgba(112, 120, 230, 0.15);
+	box-shadow: none;
 	height: 100%;
 	width: calc(100% - 400px);
 	margin-left: auto;
@@ -27,7 +27,7 @@
 	background-color: #fff;
 	border-bottom: 1px solid rgba(112, 120, 230, 0.2);
 	height: 70px;
-	box-shadow: 0 2px 10px rgba(112, 120, 230, 0.1);
+	box-shadow: none;
 	border-top-left-radius: 16px;
 	border-top-right-radius: 16px;
 }
