--- a/vue/src/styles/chat/messages/MessageBase.scss
+++ b/vue/src/styles/chat/messages/MessageBase.scss
@@ -3,7 +3,7 @@
   max-width: 75%;
   margin-bottom: 4px;
   display: flex;
-  align-items: flex-start;
+  flex-direction: column;
   position: relative;
   
   &:not(.first-message) {
@@ -19,21 +19,27 @@
 
 .message-sent, .message-received {
   align-self: flex-end;
-  flex-direction: row-reverse;
   margin-right: 36px;
   
   &.first-message {
     margin-right: 36px;
   }
+  
+  .message-content {
+    flex-direction: row-reverse;
+  }
 }
 
 .message-received {
   align-self: flex-start;
-  flex-direction: row;
   margin-left: 36px;
   
   &.first-message {
     margin-left: 36px;
+  }
+  
+  .message-content {
+    flex-direction: row;
   }
 }
 
@@ -82,11 +88,11 @@
     .reply-to {
       font-weight: bold;
       margin-bottom: 2px;
-      color: #666;
+      color: #ffffff;
     }
     
     .reply-text {
-      color: #777;
+      color: #fdf6f6;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -110,11 +116,34 @@
 .message-content {
   width: 100%;
   display: flex;
-  flex-direction: column;
+  align-items: flex-start;
+  position: relative; /* Relatív pozicionálás a profilkép abszolút pozicionálásához */
+  gap: 8px; /* Vékony margó a profilkép és az üzenet konténer között */
 }
 
 .message-text {
   padding: 4px 0;
+}
+
+// Küldő neve
+.sender-name {
+  font-size: 12px;
+  font-weight: 500;
+  margin-bottom: 4px;
+  opacity: 0.8;
+  position: relative; /* Relatív pozicionálás a profilkép miatt */
+}
+
+.message-sent .sender-name {
+  text-align: right;
+  color: #5a61d2;
+  align-self: flex-end;
+}
+
+.message-received .sender-name {
+  text-align: left;
+  color: #484a6a;
+  align-self: flex-start;
 }
 
 // Sötét mód
@@ -133,5 +162,13 @@
   .message-received .message-bubble {
     background-color: #2d2d3a;
     color: #e0e0e0;
+  }
+  
+  .message-sent .sender-name {
+    color: #a4a9ff;
+  }
+  
+  .message-received .sender-name {
+    color: #b8b8c8;
   }
 }
